# supply-chain-detector

./: Dockerfile  README.md  __init__.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: __init__.py  app.py  supply_chain_environment.py
